syntax = "proto3";

package ocf.cloud.cqrs.eventbus.v2;

option go_package = "github.com/plgd-dev/hub/resource-aggregate/cqrs/eventbus/pb;pb";

message Event {
    uint64 version = 1;
    string event_type = 2;
    string group_id = 3;
    string aggregate_id = 4;
    bytes data = 5;
    bool is_snapshot = 6;
    int64 timestamp = 7;
}